Probando Master Page

--- a/LibreriaCamiloWeb/Base.Master
+++ b/LibreriaCamiloWeb/Base.Master
@@ -21,8 +21,9 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
+    
     <img src="WebHtml.jpg" />
-    <nav class="navbar navbar-expand-lg navbar-secundary bg-secundary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
         <a class="navbar-brand" href="#"><strong>Libreria Camilo</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
