--- a/LibreriaCamiloWeb/Base.Master
+++ b/LibreriaCamiloWeb/Base.Master
@@ -21,6 +21,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- jquery -->
+    <script src="/Scripts/jquery-3.2.1.slim.min.js"></script>
+
+    <script src="/Scripts/bootstrap.min.js"></script>
+
+    <link href="/Content/toastr.min.css" rel="stylesheet" />
+    <script src="Scripts/toastr.min.js"></script>
+
 
 
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -29,8 +37,54 @@
 <body>
 
     <img src="WebHtml.jpg" />
-    
 
+    <!--Menu-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="#">Libreria Camilo</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/Default.aspx">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownusuario" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/UI/Registros/rUsuarios.aspx">Registro</a>
+                        <a class="dropdown-item" href="/UI/Consultas/cUsuarios.aspx">Consulta</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdowncliente" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clientes
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/UI/Registros/rClientes.aspx">Registro</a>
+                        <a class="dropdown-item" href="/UI/Consultas/cClientes.aspx">Consulta</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownproducto" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/UI/Registros/rProductos.aspx">Registro</a>
+                        <a class="dropdown-item" href="/UI/Consultas/cProductos.aspx">Consulta</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownfactura" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facturas
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/UI/Registros/rFacturas.aspx">Registro</a>
+                        <a class="dropdown-item" href="/UI/Consultas/cFacturas.aspx">Consulta</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Support</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 
     <div class="container">
@@ -43,7 +97,6 @@
             </div>
         </form>
     </div>
-    <script src="Scripts/jquery-3.2.1.slim.min.js"></script>
-    <script src="Scripts/bootstrap.min.js"></script>
+
 </body>
 </html>
